src-org/main/default/objects/Test_Drive__c/Test_Drive__c.object-meta.xml
<CustomObject>
    <label>Test Drive</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Test Drive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>