src-org/main/default/objects/Test_Drive__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>