src-org/main/default/objects/Test_Drive__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle_Model__c</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>